--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,3 +8,13 @@
 # where the inspected file is and continue its way up to the root directory.
 #
 # See https://github.com/rubocop-hq/rubocop/blob/master/manual/configuration.md
+
+Style/AsciiComments:
+  Enabled: false
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*'
+AllCops:
+  Exclude:
+    - 'vendor/**/*'
+    - 'aasm_to_plantuml.gemspec'
