Rename application name
aasm_to_plantuml -> aasm_parser
AasmToPlantuml -> AasmParser

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,5 +21,5 @@ Metrics/LineLength:
 AllCops:
   Exclude:
     - 'vendor/**/*'
-    - 'aasm_to_plantuml.gemspec'
+    - 'aasm_parser.gemspec'
     - 'Guardfile'
